@@ -1,0 +1,12 @@
+../exult_bg.flx
+hoe_of_destruction.shp
+caddellite_helmet.shp
+magic_boomerang.shp
+great_dagger.shp
+gorget.shp
+magicgorget.shp
+cleaver.shp
+faces.shp
+faces2.shp
+amulets.shp
+bgfiredoom.shp
