@@ -24,14 +24,3 @@ sfx_conversion.shp
 palette_fades.shp
 defaultkeys.txt
 scaling_method.shp
-hoe_of_destruction.shp
-caddellite_helmet.shp
-magic_boomerang.shp
-great_dagger.shp
-gorget.shp
-magicgorget.shp
-cleaver.shp
-faces.shp
-faces2.shp
-amulets.shp
-bgfiredoom.shp
