@@ -87,6 +87,7 @@ private:
 	bool in_dungeon;		// true if inside a dungeon.
 	std::ifstream chunks;		// "u7chunks" file.
 	Vga_file exult_flx;		// "<data>/exult.flx"
+	Vga_file exultbg_flx;		// "<data>/exult_bg.flx"
 	Shapes_vga_file shapes;		// "shapes.vga" file.
 	Vga_file gumps;			// "gumps.vga" - open chests, bags.
 	Vga_file paperdolls;		// "paperdoll.vga" - paperdolls in SI
@@ -333,6 +334,8 @@ public:
 		{ return paperdoll ? paperdolls.get_shape(shapenum, framenum) : gumps.get_shape(shapenum, framenum); }
 	Shape_frame *get_exult_shape(int shapenum, int framenum)
 		{ return exult_flx.get_shape(shapenum, framenum); }
+	Shape_frame *get_exultbg_shape(int shapenum, int framenum)
+		{ return exultbg_flx.get_shape(shapenum, framenum); }
 					// Get screen area of a gump.
 					//   for painting it.
 	Rectangle get_gump_rect(Gump *gump);
@@ -406,6 +409,11 @@ public:
 		Shape_frame *shape = exult_flx.get_shape(shapenum, framenum);
 		if (shape) paint_shape(xoff, yoff, shape);
 		}
+	void paint_exultbg_shape(int xoff,int yoff, int shapenum, int framenum)
+	{
+		Shape_frame *shape = exultbg_flx.get_shape(shapenum, framenum);
+		if (shape) paint_shape(xoff, yoff, shape);
+	}
 	Shape_frame *get_face(int shapenum, int framenum) {
 		return faces.get_shape(shapenum, framenum);
 	}
